# wgup

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  test.py  wg-tui.py
src/: __init__.py  config.py  frontend.py  util.py  wireguard.py
test/: test_wireguard.py  util.py
wgtui/: __init__.py  __main__.py  cli.py  config.py  frontend.py  util.py  wireguard.py
wgup/: __main__.py  cli.py  config.py  defaults.py  frontend.py  util.py  wireguard.py
