[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wgup"
version = "0.0.0-alpha.2"
authors = [
    {name="Juno Meifert", email="jvmeifert@gmail.com"},
]
description = "Scriptable shortcuts for managing Wireguard interfaces."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Utilities"
]
license = "BSD-2-Clause"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/lavajuno/wgup"
Issues = "https://github.com/lavajuno/wgup/issues"

[tool.hatch.build.targets.wheel]
packages = ["wgup"]

[project.scripts]
wgup = "wgup.cli:entrypoint"
